<resources>
    <string name="app_name">MatheTrainer</string>
    <string name="addieren">addieren</string>
    <string name="geloesteAufgaben">Aufgaben gelöst</string>
    <string name="aufgabe">Aufgabe</string>
    <string name="hauptMenue">Hauptemenü</string>
    <string name="versuche">Versuche</string>
    <string name="waehle">Wähle eine Aufgabenart</string>
    <string name="subtrahieren">subtrahieren</string>
    <string name="ErgebnisEingeben">Ergebnis:</string>
    <string name="adderg">addieren plus</string>
    <string name="loesung">lösen</string>
    <string name="suberg">Substrahieren Plus</string>
    <string name="klasse">In welche Klasse gehst du?</string>
    <string name="biswieviel">Bis wieviel kannst du rechnen?</string>
    <string name="reset">Zähler zurücksetzen</string>
    <string name="allTime">Alle Aufgaben</string>
</resources>
