<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/waehle"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonAdd"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:tag="add"
            android:text="@string/addieren" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="200dp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:tag="sub"
            android:text="@string/subtrahieren" />


        <Button
            android:id="@+id/buttonAddErg"
            android:layout_width="200dp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:tag="adderg"
            android:text="@string/adderg" />

        <Button
            android:id="@+id/buttonSubErg"
            android:layout_width="200dp"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="buttonClick"
            android:tag="adderg"
            android:text="@string/suberg" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/biswieviel" />

        <EditText
            android:id="@+id/bisMaxEingabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text="20" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>