<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EinfachesRechnenMitEingabe">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/geloesteAufgaben"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/geloesteAufgaben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="TextView"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/versuche"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/versucheView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="TextView"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAufgabe"
                android:layout_width="180dp"
                android:layout_height="wrap_content"

                android:text="@string/aufgabe"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/aktuelleAufgabe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="TextView"
                android:textSize="30sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ErgebnisEingeben"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/eingabeZahl"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ErgebnisEingeben"
            android:inputType="number"
            android:textSize="24sp" />

        <Button
            android:id="@+id/loesung4"
            android:layout_width="match_parent"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_height="64dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:onClick="loesungButtonClick"
            android:text="@string/loesung"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>