<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".EinfachesRechnen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/geloesteAufgaben"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/geloesteAufgaben"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="TextView"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/versuche"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/versucheView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="TextView"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAufgabe"
                android:layout_width="180dp"
                android:layout_height="wrap_content"

                android:text="@string/aufgabe"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/aktuelleAufgabe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loesung1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:onClick="loesungButtonClick"
            android:paddingTop="24dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/loesung2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:onClick="loesungButtonClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/loesung3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loesungButtonClick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/loesung4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loesungButtonClick"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="hauptMenue"
        android:text="@string/hauptMenue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>